--- a/basics/2methodsToCreateDom/jsx.html
+++ b/basics/2methodsToCreateDom/jsx.html
@@ -21,8 +21,18 @@
                 <span>Hello,React!!!!</span>    
             </h1>
         )
-
         ReactDOM.render(VDOM, document.getElementById('test'))
+
+        const TDOM = document.getElementById('demo')
+        console.log('virtual dom', VDOM)
+        console.log('real dom', TDOM)
+        debugger;
+
+        console.log(typeof VDOM)
+        console.log(VDOM instanceof Object)
+
+        console.log(VDOM);
+        console.log(TDOM);
 	</script>
 </body>
 </html>
