--- a/basics/practice.html
+++ b/basics/practice.html
@@ -9,11 +9,11 @@
     <div id="test"></div>
 	
 	<!-- 引入react核心库 -->
-	<script type="text/javascript" src="../js/react.development.js"></script>
+	<script type="text/javascript" src="./js/react.development.js"></script>
 	<!-- 引入react-dom，用于支持react操作DOM -->
-	<script type="text/javascript" src="../js/react-dom.development.js"></script>
+	<script type="text/javascript" src="./js/react-dom.development.js"></script>
 	<!-- 引入babel，用于将jsx转为js -->
-	<script type="text/javascript" src="../js/babel.min.js"></script>
+	<script type="text/javascript" src="./js/babel.min.js"></script>
 
     <script type="text/babel">
         // this script is used to create list.
@@ -31,7 +31,7 @@
                 </ul>
             </div>
         )
-        ReactDom.render(VDOM, document.getElementById('test'))
+        ReactDOM.render(VDOM, document.getElementById('test'))
     </script>
 </body>
 </html>
