--- a/basics/ThreeMainProperties/refsCallback.html
+++ b/basics/ThreeMainProperties/refsCallback.html
@@ -3,37 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>get value from input box</title>
+    <title>Document</title>
 </head>
 <body>
     <div id="test"></div>
+	
 	<script type="text/javascript" src="../js/react.development.js"></script>
 	<script type="text/javascript" src="../js/react-dom.development.js"></script>
 	<script type="text/javascript" src="../js/babel.min.js"></script>
 
     <script type="text/babel">
-        class Demo extends React.Component{
+        class Demo extends React.Component {
+            myRef = react.createRef()
+
             showData = ()=>{
-                const {input1} = this.refs
+                const {input1} = this
                 alert(input1.value)
             }
 
             showData2 = ()=>{
-                const {input2} = this.refs
-                alert(input2.value)
+                alert(this.myRef.current.value)
             }
+
             render(){
                 return (
                     <div>
-                        <input ref="input" type="text" placeholder="click To Display"/>
-                        <buttuon onClick={this.showData}> click here</buttuon>
-                        <input ref="input2" onBlur={this.showData2} type="text" placeholder="lose focus"/>
+                        <input ref={c=>this.input1 = c} type="text" placehoder="click button to display"/>
+                        <button onClick={this.showData}></button> 
+                        <input onBlur={this.showData2} ref={this.myRef} type="text" placehoder="lose focus"/>
                     </div>
                 )
             }
 
+
         }
-        ReactDOM.render(<Demo a="1" b="2"/>, document.getElementById('test'))
+        ReactDOM.render(<Demo/>, document.getElementById('test'))
+
     </script>
 </body>
 </html>
