--- a/basics/form/uncontrolledComponents.html
+++ b/basics/form/uncontrolledComponents.html
@@ -1,1 +1,36 @@
-  
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div id="test"></div>
+	
+	<script type="text/javascript" src="../js/react.development.js"></script>
+	<script type="text/javascript" src="../js/react-dom.development.js"></script>
+	<script type="text/javascript" src="../js/babel.min.js"></script>
+
+    <script type="text/babel">
+		class Login extends React.Component{
+			handleSubmit = (event)=>{
+				event.preventDefault() //prevent submitting the form.
+				const {username,password} = this
+				alert(`你输入的用户名是：${username.value},你输入的密码是：${password.value}`)
+			}
+			render(){
+				return(
+					<form onSubmit={this.handleSubmit}>
+						username：<input ref={c => this.username = c} type="text" name="username"/>
+						password：<input ref={c => this.password = c} type="password" name="password"/>
+						<button>login</button>
+					</form>
+				)
+			}
+		}
+		ReactDOM.render(<Login/>,document.getElementById('test'))
+	</script>
+</body>
+</html>
