init a new project to develop under the scaffold.

--- a/basics/currying/usingCurrying.html
+++ b/basics/currying/usingCurrying.html
@@ -6,6 +6,42 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="test"></div>
+	
+	<script type="text/javascript" src="../js/react.development.js"></script>
+	<script type="text/javascript" src="../js/react-dom.development.js"></script>
+	<script type="text/javascript" src="../js/babel.min.js"></script>
+
+    <script type="text/babel">
+        class Login extends React.Component{
+            state = {
+                username:"",
+                password:""
+            }
+            saveFormData = (dataType) => {
+                return (event) => {
+                    this.setState({[dataType]: event.target.value})
+                }
+            }
+
+            handleSubmit = (event) => {
+                event.preventDefault()
+                const {username, password} = this.state
+                alert(`the user login name is ${username}, password you enter is ${password}`)
+
+            }
+
+            render(){
+                return (
+                    <form onSubmit={this.handleSubmit}>
+                        username: <input onChange={this.saveFormData('username')} type="text" name="username"/>
+                        password: <inpu onChange={this.saveFormData('password')} type="password" name="password"/>
+                        <button>login</button>
+                    </form>
+                )
+            }
+        }
+        ReactDOM.render(<Login/>, document.getElementById('test'))
+    </script>
 </body>
 </html>
