--- a/basics/Diffing/validatingDiffAlgo.html
+++ b/basics/Diffing/validatingDiffAlgo.html
@@ -6,6 +6,37 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="test"></div>
+	<script type="text/javascript" src="../js/17.0.1/react.development.js"></script>
+	<script type="text/javascript" src="../js/17.0.1/react-dom.development.js"></script>
+	<script type="text/javascript" src="../js/17.0.1/babel.min.js"></script>
+    <script type="text/babel">
+        // Validating the diffing algorithm: Compare and swap.
+        class Time extends React.Component {
+            state = {date: new Date()}
+            
+            componentDidMount() {
+                setInterval(() => {
+                    this.setState({
+                        date: new Date()
+                    })
+                }, 1000)
+            }
+
+            render(){
+                return (
+                    <div>
+                        <h1>hello</h1>
+                        <input type="text"/>
+                        <span>
+                            now: {this.state.date.toTimeString()}
+                            <input type="text"/>
+                        </span>  
+                    </div>
+                )
+            }
+        }
+        ReactDOM.render(<Time/>, document.getElementById('test'))
+    </script>
 </body>
 </html>
